refactoring first task

--- a/src/component/Main/Main.module.css
+++ b/src/component/Main/Main.module.css
@@ -1,6 +1,8 @@
 
 .mainBlock {
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
     background-color: seashell;
 }
 
@@ -8,6 +10,7 @@
     height: 100%;
     width: 80%;
     margin: 0 auto;
+    padding-bottom: 5vh;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -17,6 +20,7 @@
 }
 
 .info {
+    margin-top: 5vh;
     border-radius: 3px;
     background-color: ghostwhite;
 }
@@ -24,6 +28,7 @@
 .photo {
     width: 200px;
     height: 250px;
+    margin-top: 5vh;
     border: 1px solid;
     border-radius: 3px;
     background-color: ghostwhite;
