--- a/src/component/Footer/Footer.module.css
+++ b/src/component/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 
 .footerBlock {
-    height: 60vh;
+    min-height: 60vh;
     display: flex;
     align-items: center;
     background-color: lightgrey;
@@ -8,10 +8,10 @@
 }
 
 .footerContainer {
-    height: 80%;
+    height: 100%;
     width: 80%;
     margin: 0 auto;
-
+    padding: 3vh 0;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -37,11 +37,12 @@
 .link {
     width: 77px;
     height: 77px;
-background-color: grey;
+    margin: 1px 0;
+    background-color: grey;
 }
 
 .footerEnd {
 
-   font-size: 20px;
+    font-size: 20px;
 }
 
