--- a/src/component/Nav/Nav.module.css
+++ b/src/component/Nav/Nav.module.css
@@ -3,8 +3,15 @@
     width: 250px;
     display: flex;
     justify-content: space-around;
+    margin-right: 20px;
     color: ghostwhite;
     border: 1px solid;
     border-radius: 2px;
 
+
+}
+
+.navContainer a {
+    text-decoration: none;
+    color: ghostwhite;
 }
