--- a/src/component/Skills/Skills.module.css
+++ b/src/component/Skills/Skills.module.css
@@ -1,7 +1,10 @@
 
 .skillsBlock {
-    height: 100vh;
+    min-height: 100vh;
     background-color: aquamarine;
+    display: flex;
+    align-items: center;
+
 }
 
 .skillsContainer {
@@ -10,9 +13,8 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
-
     flex-direction: column;
-
+    padding-bottom: 5vh;
     border: 1px solid;
 }
 
@@ -21,14 +23,15 @@
     width: 100%;
 
     display: flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
     flex-wrap: wrap;
-    justify-content: space-between;
-    
+    /*justify-content: space-between;*/
+    padding-top: 10vh;
 }
 
 .skill {
     width: 250px;
+    margin: 1vh auto;
     display: flex;
     flex-direction: column;
     align-items: center;
