--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -1,24 +1,42 @@
 
 .mainBlock {
+  position: relative;
   min-height: 100vh;
   display: flex;
   align-items: center;
   background-color: seashell;
 
+  .mainBackImg{
+    position: fixed;
+    top: 100px;
+    bottom: 0;
+    left: 0;
+    right: 0;  
+    color: rgba($color: #cec7c7, $alpha: 0.3);
+    text-shadow: 2px  3px rgba($color: #727070, $alpha: 0.3) ;
+    
+    
+    text-align: center;
+    font-size: 60px;
+    font-weight: 800;
+    z-index: 20;
+    }
+
   .mainContainer {
     height: 100%;
     width: 80%;
     margin: 0 auto;
-    padding-bottom: 5vh;
+    
     display: flex;
-    flex-direction: row;
+    
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     border: 1px solid;
 
+    
     .info {
-      margin-top: 5vh;
+      
       border-radius: 3px;
       background-color: ghostwhite;
     }
@@ -27,11 +45,13 @@
 }
     .photo {
       width: 200px;
-      height: 250px;
-      margin-top: 5vh;
-      border: 1px solid;
-      border-radius: 3px;
-transition: width 3s;
+      height: 350px;
+      
+      
+      border-radius: 0 30px 30px 0;
+      transition: width 2s;
+      opacity: 0.97;
+      z-index: 30;
     }
 
   }
