--- a/src/features/nav/Nav.module.scss
+++ b/src/features/nav/Nav.module.scss
@@ -12,6 +12,22 @@
         color: ghostwhite;
     }
 
+    .scrollToUp{
+        position: fixed;
+        bottom: 57px;
+        right: 15px;
+        width: 33px;
+        height: 33px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid gray;
+        border-radius: 50%;
+        
+        
+        font-size: 35px;
+        z-index: 50;
+    }
 
 }
 
