--- a/src/features/nav/Nav.module.scss
+++ b/src/features/nav/Nav.module.scss
@@ -1,17 +1,28 @@
 
 .navContainer {
-    width: 250px;
+
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    margin-right: 20px;
+    flex-wrap: wrap;
+    margin: 0 20px;
     color: ghostwhite;
-    border: 1px solid;
+    
     border-radius: 2px;
-    .navContainer a {
-        text-decoration: none;
-        color: ghostwhite;
-    }
 
+    .navLink {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      min-width: 110px;
+      min-height: 40px;
+      font-size: 20px;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     border-radius: 5px;
+      background-color:rgba($color:  darkgray, $alpha: 0.9);
+      cursor: pointer;
+
+    }
     .scrollToUp{
         position: fixed;
         bottom: 57px;
