--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -1,5 +1,6 @@
-@use './variables';
-@use 'sass.map';
+@use 'sass:map';
+
+@import './variables';
 
 @mixin text($fontFamily, $fontSize) {
   font-family: $fontFamily; //'Arial', 'sans-serif'
