--- a/src/features/header/Header.module.scss
+++ b/src/features/header/Header.module.scss
@@ -1,9 +1,9 @@
+@import '../../common/styles/sass/mixins.scss';
 
 .container {
     position:fixed;
     top:0;
-    left:0;
-    right: 0;
+    width: 100%;
     
     z-index: 100;
     height: 80px;
@@ -12,5 +12,22 @@
     justify-content: flex-end;
 
     background-color:rgba($color:  darkgray, $alpha: 0.7);
-    overflow-н: hidden;
+    
+    transition: all 0.5s ease 0s;
+
+    @include max-bp('small') {
+        
+            display: none;
+    }
 }
+.mobileHeaderContainer {
+    display: none; 
+
+    @include max-bp('small') {
+        
+        display: flex;
+}
+}
+
+
+    
