--- a/src/features/footer/Footer.module.scss
+++ b/src/features/footer/Footer.module.scss
@@ -1,37 +1,46 @@
+@import '../../common/styles/sass/mixins.scss';
 
 .footerBlock {
-    min-height: 60vh;
-    display: flex;
-    align-items: center;
-    background-color: lightgrey;
+@include templatePageBlock(lightgrey, $minHeight:40vh);
+    // min-height: 60vh;
+    // display: flex;
+    // align-items: center;
+    // background-color: lightgrey;
     color: darkolivegreen;
     .footerContainer {
-        height: 100%;
-        width: 80%;
-        margin: 0 auto;
-        padding: 3vh 0;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        border: 1px solid;
-        border-radius: 3px;
+@include templatePageContainer();
+        // height: 100%;
+        // width: 80%;
+        // margin: 0 auto;
+        // padding: 3vh 0;
+        // display: flex;
+        // align-items: center;
+        // flex-direction: column;
+        // flex-wrap: wrap;
+        // justify-content: space-between;
+       
         .footerNav {
 
-            width: 80%;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: space-around;
+            @include templatePageContainer(row);
 
-            border-radius: 3px;
-            background-color: darkseagreen;
+            // width: 80%;
+            // display: flex;
+            // flex-direction: row;
+            // flex-wrap: wrap;
+            // align-items: center;
+            // justify-content: space-around;
+
+            // border-radius: 3px;
+            padding-top: 0;
+             background-color: darkseagreen;
+
+             @include max-bp('mini') {
+                 width: 100%;
+             }
             .link {
                 width: 77px;
                 height: 77px;
-                margin: 1px 0;
+                margin: 3px;
                 background-color: grey;
             }
 
