--- a/src/features/remove-work/RemoveWork.module.scss
+++ b/src/features/remove-work/RemoveWork.module.scss
@@ -1,21 +1,26 @@
+@import '../../common/styles/sass/mixins.scss';
 
 .removeWorkBlock {
-  min-height: 40vh;
-  display: flex;
-  align-items: center;
-  background-color: lavender;
+
+  @include templatePageBlock(lavender, $minHeight:40vh);
+  // min-height: 40vh;
+  // display: flex;
+  // align-items: center;
+  // background-color: lavender;
 
   .removeWorkContainer {
-    height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    padding: 3vh 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    border: 1px solid;
-    border-radius: 3px;
+
+    @include templatePageContainer();
+    // height: 100%;
+    // width: 80%;
+    // margin: 0 auto;
+    // padding: 3vh 0;
+    // display: flex;
+    // align-items: center;
+    // flex-direction: column;
+    // justify-content: space-between;
+    // border: 1px solid;
+    // border-radius: 3px;
 
     .title {
       text-align: center;
@@ -23,7 +28,7 @@
     }
 
     .linkOffRemoveWork {
-      font-family: Inconsolata;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
       font-weight: bolder;
       font-size: 35px;
       padding: 10px;
