--- a/src/features/skills/Skills.module.scss
+++ b/src/features/skills/Skills.module.scss
@@ -1,28 +1,25 @@
+@import '../../common/styles/sass/mixins.scss';
 
 .skillsBlock {
-  min-height: 100vh;
-  background-color: aquamarine;
-  display: flex;
-  align-items: center;
+  @include templatePageBlock(aquamarine);
+  // min-height: 100vh;
+  // background-color: aquamarine;
+  // display: flex;
+  // align-items: center;
 
   .skillsContainer {
-    height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding-bottom: 5vh;
-    border: 1px solid;
+    @include templatePageContainer();
+    // height: 100%;
+    // width: 80%;
+    // margin: 0 auto;
+    // display: flex;
+    // align-items: center;
+    // flex-direction: column;
+    // padding-bottom: 5vh;
+    // border: 1px solid;
 
     .allSkills {
-      width: 100%;
-
-      display: flex;
-      /*flex-direction: row;*/
-      flex-wrap: wrap;
-      /*justify-content: space-between;*/
-      padding-top: 10vh;
+     @include itemsBox();
     }
   }
 }
