--- a/src/features/header/Header.module.scss
+++ b/src/features/header/Header.module.scss
@@ -45,6 +45,8 @@
     opacity: 0.5;
     cursor: pointer;
     z-index: 120;
+    border-radius: 45%;
+   
     
     &:hover {
       box-shadow: 3px 3px 15px white;
@@ -63,7 +65,7 @@
      display: flex;
       width: 100%;
       height: 100vh;
-      background-color: rgb(72, 124, 122, 0.9);
+      background-color: rgb(72, 124, 122, 0.7);
       z-index: 110;
       
       
