--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -52,8 +52,8 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  border-left: 1px solid;
-  border-right: 1px solid;
+  // border-left: 1px solid;
+  // border-right: 1px solid;
   padding-top: 50px;
   
 
