--- a/src/features/navbar/NavBar.module.scss
+++ b/src/features/navbar/NavBar.module.scss
@@ -7,43 +7,50 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 0 20px;
+    margin-left: 430px;
+    // margin: 0 20px;
     color: ghostwhite;
-    
+    z-index: 120;
     border-radius: 2px;
 
-    @include max-bp('small') {
-
-      flex-direction: column;
-      align-items: end;
+    @include max-bp('strech') {
+      margin-left: 330px;
     }
-      
-    
+  @include max-bp('small') {
+  
+      flex-direction: column;
+      align-items: flex-end;
+      margin-top: 50px;
+    }
+  
 
     .navLink {
         display: flex;
         justify-content: center;
         align-items: center;
+       
       min-width: 110px;
       min-height: 40px;
       font-size: 23px;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     border-radius: 5px;
-      
+    
       cursor: pointer;
 
       @include max-bp('small') {
-
+        margin-right: 20px;
+        justify-content: flex-end;
         font-size: 30px;
       }
 
-      &:hover {
+     &:hover {
         //text-shadow: 13px 13px 3px rgb(250, 250, 250), -13px -13px 3px rgb(250, 250, 250);
           transform: rotateX(360deg);
           transition: all 0.5s ease 0s;
          
         // background-color:rgba($color:  darkgray, $alpha: 0.9);
       }
+
+      
 
     }
     .active {
@@ -56,7 +63,7 @@
 
     @include max-bp('mini') {
 
-      color: seashell
+      
     }
     
   }
@@ -85,4 +92,21 @@
     }
 
 
+    // @include max-bp('small') {
 
+    //   & ::before {
+    //     content: '';
+    //     position: fixed;
+    //     top: 0;
+    //     right: 0;
+    //    display: flex;
+    //     width: 100%;
+    //     height: 100vh;
+    //     background-color: rgb(72, 124, 122, 0.3);
+    //     z-index: 110;
+    //   }
+    //   flex-direction: column;
+    //   align-items: end;
+    // }
+      
+    
