--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -29,22 +29,50 @@
     }
 
   }
+  // &::after {
+  //   content: 'FrontEnd Developer';
+  //   position: fixed;
+  //   top: 50%;
+  //   left: 3%;
+  //   transform-origin: 0 0;
+  //   transform: rotate(270deg);
+  //   //transform: scaleY(200%)  rotateZ(270deg);
+  //   translate: easy 0.5s;
+  // }
+  
+  
 }
 
-.mainBackImg{
-  position: fixed;
+// div .mainBackImg{
   
-  
-  
-  top: 100px;
-  
+//     display: block;
+//     font-size: 1.5em;
+//     margin-block-start: 0.83em;
+//     margin-block-end: 0.83em;
+//     margin-inline-start: 0px;
+//     margin-inline-end: 0px;
+//     font-weight: bold;
 
-  color: rgba($color: #cec7c7, $alpha: 0.3);
-  text-shadow: 0  0 5px rgba($color: #727070, $alpha: 0.3) ;
+// }
+.mainBackImg{ 
+
+   @include sideNamePage()
+}
+  // .mainBackImg{
+  //   position: fixed;
+    
+    
+    
+  //   top: 100px;
+    
   
+  //   color: rgba($color: #cec7c7, $alpha: 0.3);
+  //   text-shadow: 0  0 5px rgba($color: #727070, $alpha: 0.3) ;
+    
+    
+  //   text-align: center;
+  //   font-size: 60px;
+  //   font-weight: 800;
+  //   z-index: 20;
+  //   }
   
-  text-align: center;
-  font-size: 60px;
-  font-weight: 800;
-  z-index: 20;
-  }
