--- a/src/features/header/Header.module.scss
+++ b/src/features/header/Header.module.scss
@@ -4,37 +4,27 @@
     position:fixed;
     top:0;
     width: 100%;
-    
-    
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-
-    background-color:rgba($color:  darkgray, $alpha: 0.7);
+    background-color:rgba($color:  rgb(94, 91, 91), $alpha: 0.7);
     z-index: 100;
     transition: all 0.5s ease 0s;
 
     &::after{
-      
       content: 'My Portfolio';
       position: fixed;
       top: 3px;
       left: 10px;
-      
       width: 100%;
       height: 100%;
-    
-     
       font-size: 70px;
       text-align: start;
       font-weight: bolder;
-     
       color: rgba(233, 233, 233, 0.3);
-      text-shadow: 5px 0 15px rgba(220, 243, 242, 0.3),
-       -5px 0 15px rgba(220, 243, 242, 0.3),
-       7px 0 15px rgba(220, 243, 242, 0.3),
-       -7px 0 15px rgba(220, 243, 242, 0.3) ;
+      text-shadow: 5px 0 5px rgba(177, 236, 169, 0.3),
+       -5px 0 5px rgba(177, 236, 169, 0.3) ;
        transform: scaleX(100%);
 
        @include max-bp('strech') {
@@ -45,10 +35,13 @@
 
         font-size: 43px;
        }
+      
     }
 
     &:hover {
       box-shadow: 0 13px 25px rgb(250, 250, 250);
+      background-color:rgba($color:  rgb(49, 48, 48), $alpha: 0.9);
+      
     }
 
     @include max-bp('mini') {
