--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -5,16 +5,28 @@
   
 
   @include templatePageBlock(seashell);
+
+  
   
   .mainContainer {
     // height: 100%;
    
     @include templatePageContainer(row);
 
+    @include max-bp('mini') {
+      padding-top: 130px;
+    }
+
     .info {
       
       border-radius: 3px;
       background-color: ghostwhite;
+
+      @include max-bp('small') {
+        margin-right: 10px;
+        min-width: 200px;
+      }
+
     }
 
     .photo {
@@ -29,50 +41,8 @@
     }
 
   }
-  // &::after {
-  //   content: 'FrontEnd Developer';
-  //   position: fixed;
-  //   top: 50%;
-  //   left: 3%;
-  //   transform-origin: 0 0;
-  //   transform: rotate(270deg);
-  //   //transform: scaleY(200%)  rotateZ(270deg);
-  //   translate: easy 0.5s;
-  // }
+  
   
   
 }
 
-// div .mainBackImg{
-  
-//     display: block;
-//     font-size: 1.5em;
-//     margin-block-start: 0.83em;
-//     margin-block-end: 0.83em;
-//     margin-inline-start: 0px;
-//     margin-inline-end: 0px;
-//     font-weight: bold;
-
-// }
-.mainBackImg{ 
-
-   @include sideNamePage()
-}
-  // .mainBackImg{
-  //   position: fixed;
-    
-    
-    
-  //   top: 100px;
-    
-  
-  //   color: rgba($color: #cec7c7, $alpha: 0.3);
-  //   text-shadow: 0  0 5px rgba($color: #727070, $alpha: 0.3) ;
-    
-    
-  //   text-align: center;
-  //   font-size: 60px;
-  //   font-weight: 800;
-  //   z-index: 20;
-  //   }
-  
