--- a/src/features/navbar/NavBar.module.scss
+++ b/src/features/navbar/NavBar.module.scss
@@ -45,8 +45,11 @@
     }
 
     &:hover {
+
+      
       //text-shadow: 13px 13px 3px rgb(250, 250, 250), -13px -13px 3px rgb(250, 250, 250);
-      transform: rotateX(360deg);
+      //transform: rotateX(360deg);
+      transform: scaleY(150%);
       transition: all 0.5s ease 0s;
 
       // background-color:rgba($color:  darkgray, $alpha: 0.9);
