added formik for contacts form, remote work:hover

--- a/src/features/remove-work/RemoveWork.module.scss
+++ b/src/features/remove-work/RemoveWork.module.scss
@@ -25,6 +25,7 @@
     .title {
       text-align: center;
       font-size: 33px;
+      
     }
 
     .linkOffRemoveWork {
@@ -40,6 +41,9 @@
     }
 
 
+  }
+  &:hover{
+    filter: invert(150%);
   }
 
 }
