--- a/src/features/contacts/Contacts.module.scss
+++ b/src/features/contacts/Contacts.module.scss
@@ -13,6 +13,8 @@
   .contactsContainer {
 
     @include templatePageContainer();
+    
+   
     // height: 100%;
     // width: 80%;
     // margin: 0 auto;
@@ -24,35 +26,36 @@
     // border: 1px solid;
     // border-radius: 3px;
 
-    .contactsForm {
-      min-height: 350px;
-      // width: 80%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      border-radius: 3px;
-      background-color: indigo;
+  //   .contactsForm {
+  //     min-height: 350px;
+  //     // width: 80%;
+  //     display: flex;
+  //     flex-direction: column;
+  //     align-items: center;
+  //     justify-content: space-between;
+  //     border-radius: 3px;
+  //     background-color: indigo;
 
-     @include adaptabilityWidth(100%);
-      .input {
-        height: 50px;
+  //    @include adaptabilityWidth(100%);
+  //     .input {
+  //       height: 50px;
        
-        font-size: 20px;
-        @include adaptabilityWidth();
-      }
-      .textarea {
-        height: 180px;
+  //       font-size: 20px;
+  //       @include adaptabilityWidth();
+  //     }
+  //     .textarea {
+  //       height: 180px;
         
-        font-size: 20px;
-        @include adaptabilityWidth();
-      }
-    }
-    .contactsButton {
-      padding: 15px 35px;
-      border-radius: 3px;
-    }
-  }
+  //       font-size: 20px;
+  //       @include adaptabilityWidth();
+  //     }
+  //   }
+  //   .contactsButton {
+  //     padding: 15px 35px;
+  //     border-radius: 3px;
+  //   }
+  // }
+}
 }
 
 
