--- a/src/features/contacts/ContactsForm.module.scss
+++ b/src/features/contacts/ContactsForm.module.scss
@@ -1,8 +1,11 @@
 @import '../../common/styles/sass/mixins.scss';
 
 .contactsFormContainer {
-
-    min-height: 350px;
+    position:relative;
+    min-height: 550px;
+    margin-top: 50px;
+    margin-bottom: 130px;
+    padding-bottom: 30px;
     // width: 80%;
     display: flex;
     flex-direction: column;
@@ -11,21 +14,26 @@
     border-radius: 3px;
     background-color: indigo;
 
+  & label {
+    margin-top: 20px;
+  }
    @include adaptabilityWidth(100%);
     & input {
       height: 50px;
-     
+      
       font-size: 20px;
       @include adaptabilityWidth();
     }
     & textarea {
-      height: 180px;
+      height: 150px;
       
       font-size: 20px;
       @include adaptabilityWidth();
     }
 
     button {
+      position: absolute;
+      bottom: -90px;
       padding: 15px 35px;
       border-radius: 3px;
     }
