--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,17 +1,26 @@
 
 .app {
 
-
-  & :nth-child(even) {
-
-    //background-color: rgb(66, 49, 27);
-  }
 }
 
 
 
-.appNoScroll {
+.modalBox {
+  width: 250px;
+  min-height: 250px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: rgba($color: #000000, $alpha: 0.7);
+  color: aliceblue;
+  z-index: 500;
 
-  overflow: hidden;
- 
+  & button{
+
+    width: 150px;
+    height: 50px;
+  }
+  
 }
