--- a/src/common/component/preloader/Preloader.module.scss
+++ b/src/common/component/preloader/Preloader.module.scss
@@ -1,20 +1,20 @@
 .preloaderContainer {
 
-  position: fixed;
-  left: 50vw;
-  top: 50vh;
-  transform: translateX(-50%) translateY(-50%);
-  border: solid 3px firebrick;
-  border-radius: 5px;
-  z-index: 500;
-
-  &::after {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    right: 0;
-    background-color: cadetblue;
-    z-index: 499;
-  }
+    // position: fixed;
+    // top: 0;
+    // right: 0;
+    // left: 0;
+    // bottom: 0;
+    // background-color: rgba(rgb(45, 53, 53), 0.6);
+    // z-index: 499;
+  
+    & img{
+      position: fixed;
+      left: 50vw;
+      top: 50vh;
+      transform: translateX(-50%) translateY(-50%);
+      border: solid 3px firebrick;
+      border-radius: 5px;
+      z-index: 500;
+    }
 }
