--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,7 +1,7 @@
 $textColor: #fff;
-$primaryColor: #1aaa;
+$primaryColor: rgba(56, 56, 56, 0.667);
 
-$generalBackgroundColor: rgb(36, 35, 35);
+$generalBackgroundColor: rgb(32, 32, 32);
  
 
 $breakpoints: (
