--- a/src/features/projects/project/Project.module.scss
+++ b/src/features/projects/project/Project.module.scss
@@ -7,9 +7,10 @@
     // flex-direction: column;
     // align-items: center;
     // margin: 10px;
-    border: 2px solid orange;
-    border-radius: 3px;
-    background-color: burlywood;
+    // border: 2px solid orange;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px white;
+    background-color: rgb(54, 54, 54);
     color: azure;
 
     
@@ -33,10 +34,10 @@
     }
 
     .descriptionTitle {
-position: relative;
-outline: none;
-z-index: 0;
-padding-bottom: 5px;
+        position: relative;
+        outline: none;
+        z-index: 0;
+        padding-bottom: 5px;
         &::after {
             position: absolute;
             content: '';
@@ -51,7 +52,7 @@ padding-bottom: 5px;
     }
     .projectDescription {
         text-align: center;
-        background-color: grey;
+       
     }
 }
 
