--- a/src/features/skills/skill/Skill.module.scss
+++ b/src/features/skills/skill/Skill.module.scss
@@ -4,7 +4,7 @@
     @include itemBlock(250px);
 
     border-radius: 3px;
-    background-color: burlywood;
+    background-color: rgb(51, 51, 51);
     color: azure;
     padding: 10px;
     .icon {
