--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,19 +1,25 @@
+@import './common/styles/sass/mixins.scss';
 
 .app {
 
+
+  &>:nth-child(even) {
+    background-color: #2b2b2b;
+  }
 }
 
 
 
 .modalBox {
-  width: 250px;
+  width: 300px;
   min-height: 250px;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: rgba($color: #000000, $alpha: 0.7);
+  background-color: rgba($color: #a9e9b9, $alpha: 0.7);
+  border-radius: 3%;
   color: aliceblue;
   z-index: 500;
 
@@ -22,5 +28,9 @@
     width: 150px;
     height: 50px;
   }
-  
+
+  @include max-bp('small') {
+    width: 250px;
+    padding: 10px;
+  }
 }
