--- a/src/features/navbar/NavBar.module.scss
+++ b/src/features/navbar/NavBar.module.scss
@@ -42,6 +42,12 @@
       margin-right: 20px;
       justify-content: flex-end;
       font-size: 30px;
+
+      &:hover{
+        transform: none !important;
+
+      }
+      
     }
 
     &:hover {
