--- a/src/features/remove-work/RemoveWork.module.scss
+++ b/src/features/remove-work/RemoveWork.module.scss
@@ -25,6 +25,7 @@
     .title {
       text-align: center;
       font-size: 33px;
+      color: #ffffff;
       
     }
 
@@ -37,6 +38,7 @@
       border-radius: 5px;
       background-color: powderblue;
       text-decoration: none;
+      box-shadow:0 0 18px 10px rgba($color: #dbdbdb, $alpha: 1.0);
       color: white;
     }
 
