--- a/src/features/remove-work/RemoveWork.module.scss
+++ b/src/features/remove-work/RemoveWork.module.scss
@@ -33,6 +33,7 @@
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       font-weight: bolder;
       font-size: 35px;
+      margin-bottom: 25px;
       padding: 10px;
       border: 2px solid lightskyblue;
       border-radius: 5px;
