--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -15,6 +15,8 @@
 
     @include max-bp('mini') {
       padding-top: 155px;
+      margin-right: 10px;
+      justify-content: flex-end;
     }
 
     .info {
