--- a/src/features/remove-work/RemoveWork.module.scss
+++ b/src/features/remove-work/RemoveWork.module.scss
@@ -40,6 +40,7 @@
       background-color: powderblue;
       text-decoration: none;
       box-shadow:0 0 18px 10px rgba($color: #dbdbdb, $alpha: 1.0);
+      cursor: pointer;
       color: white;
     }
 
