--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -82,14 +82,14 @@
 @mixin itemBlock($width, $minHeight: 300px) {
   min-height: $minHeight;
     width: $width;
-    margin: 10px ;
+    margin: 2vmin ;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     @include max-bp('mini') {
-      width: 250px;
-      margin: 10px 0;
+      max-width: 280px;
+      margin: 2vh 0;
   }
 }
 
