--- a/src/features/skills/skill/Skill.module.scss
+++ b/src/features/skills/skill/Skill.module.scss
@@ -1,25 +1,36 @@
 @import '../../../common/styles/sass/mixins.scss';
 
 .skill {
-    @include itemBlock(250px, 250px);
+    @include itemBlock(200px, 150px);
 
-
+    position: relative;
+    margin-top: 150px;
     border-radius: 3px;
     background-color: rgb(51, 51, 51);
     color: azure;
     padding: 10px;
     box-shadow: 0 0 8px 5px;
 
+    @include max-bp('mini') {
+        
+        margin: 15vh 0;
+    }
+
     .icon {
-        width: 60px;
-        height: 60px;
+        position: absolute;
+        bottom: 83%;
+        width: 170px;
+        height: 170px;
         margin: 0 auto;
-        border-radius: 3px;
-        background-color: cadetblue;
+        border-radius: 50%;
+        background-color: rgb(51, 51, 51);
+        border: 3px solid cadetblue;
     }
     .description {
         text-align: center;
     }
+
+    
 }
 
 
