--- a/src/features/footer/Footer.module.scss
+++ b/src/features/footer/Footer.module.scss
@@ -8,7 +8,7 @@
     // background-color: lightgrey;
     color: darkolivegreen;
     .footerContainer {
-@include templatePageContainer();
+        @include templatePageContainer();
         // height: 100%;
         // width: 80%;
         // margin: 0 auto;
@@ -18,6 +18,40 @@
         // flex-direction: column;
         // flex-wrap: wrap;
         // justify-content: space-between;
+
+        .infoBlock{
+            width: 400px;
+            margin-bottom: 0.2em;
+            padding: 2em;
+            border-radius: 0.3em;
+            background-color: rgb(152, 153, 152);
+
+            .infoRow {
+               
+                display: flex;
+                padding: 0.5em 0;
+                // background-color: aquamarine;
+
+                @include max-bp('mini') {
+
+                    flex-direction: column;
+                }
+
+                .infoRowTitle {
+                    flex: 1;
+                }
+                .infoRowValue{
+                    flex: 2;
+                }
+            
+            }
+
+            @include max-bp('mini') {
+
+                width: 250px;
+                padding: 1em;
+            }
+        }
        
         .footerNav {
 
@@ -32,16 +66,23 @@
 
             // border-radius: 3px;
             padding-top: 0;
-             background-color: darkseagreen;
+            border-radius: 0.3em;
+            background-color: rgb(152, 153, 152);
 
              @include max-bp('mini') {
                  width: 100%;
              }
             .link {
-                width: 77px;
-                height: 77px;
+                // width: 77px;
+                // height: 77px;
                 margin: 3px;
-                background-color: grey;
+               // background-color: grey;
+
+                & img{
+                    width: 77px;
+                    height: 77px;
+                    cursor: pointer;
+                }
             }
 
         }
