--- a/src/features/header/Header.module.scss
+++ b/src/features/header/Header.module.scss
@@ -38,7 +38,7 @@
       
     }
 
-    &:hover {
+    &:hover &:focus{
       box-shadow: 0 13px 25px rgb(250, 250, 250);
       background-color:rgba($color:  rgb(49, 48, 48), $alpha: 0.9);
       
