--- a/src/features/skills/skill/Skill.module.scss
+++ b/src/features/skills/skill/Skill.module.scss
@@ -19,12 +19,19 @@
     .icon {
         position: absolute;
         bottom: 83%;
-        width: 170px;
-        height: 170px;
+        // width: 170px;
+        // height: 170px;
         margin: 0 auto;
+        display: flex;
         border-radius: 50%;
-        background-color: rgb(51, 51, 51);
+        background-color: rgb(177, 175, 175);
         border: 3px solid cadetblue;
+        overflow: hidden;
+
+        & img{
+            width: 150px;
+            background-color: rgb(94, 94, 94);
+        }
     }
     .description {
         text-align: center;
