--- a/src/features/skills/skill/Skill.module.scss
+++ b/src/features/skills/skill/Skill.module.scss
@@ -16,9 +16,13 @@
         margin: 15vh 0;
     }
 
+    & h2 {
+        margin-top: 1.2em;
+    }
+
     .icon {
         position: absolute;
-        bottom: 83%;
+        top: -7.5em;
         // width: 170px;
         // height: 170px;
         margin: 0 auto;
@@ -34,6 +38,7 @@
         }
     }
     .description {
+        
         text-align: center;
     }
 
