corrected view app

--- a/src/features/skills/skill/Skill.module.scss
+++ b/src/features/skills/skill/Skill.module.scss
@@ -28,7 +28,7 @@
         margin: 0 auto;
         display: flex;
         border-radius: 50%;
-        background-color: rgb(177, 175, 175);
+        // background-color: rgb(177, 175, 175);
         border: 3px solid cadetblue;
         overflow: hidden;
 
