--- a/src/features/header/Header.module.scss
+++ b/src/features/header/Header.module.scss
@@ -38,7 +38,7 @@
       
     }
 
-    &:hover &:focus{
+    &:hover {
       box-shadow: 0 13px 25px rgb(250, 250, 250);
       background-color:rgba($color:  rgb(49, 48, 48), $alpha: 0.9);
       
@@ -51,24 +51,24 @@
     }
 
 
-.mobileNavMenu{
-  display: none;
+  .mobileNavMenu{
+    display: none;
 
-  @include max-bp('small') {
+    @include max-bp('small') {
        
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    font-size: 33px;
-    display: block;
-    opacity: 0.5;
-    cursor: pointer;
-    z-index: 120;
-    color:azure; 
-    &:hover {
-      opacity: 1;
-    }  
-}
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      font-size: 33px;
+      display: block;
+      opacity: 0.5;
+      cursor: pointer;
+      z-index: 120;
+      color:azure; 
+      &:hover {
+        opacity: 1;
+      }  
+  }
 }
 
 // .mobileHeaderContainer {
@@ -104,7 +104,7 @@
  
 .navbarContainer {
   width: 100%;
-display:flex;
+  display:flex;
 
 
 @include max-bp('small') {
@@ -120,11 +120,11 @@ display:flex;
 
       position: fixed;
       top: 0;
-      right: 0;
+      left: 0;
       display: flex;
       justify-content: flex-end;
       width: 100vw;
-      height: 100vh;
+      height: 105vh;
       background-color: rgba(37, 85, 97, 0.8);
       z-index: 110;
       
