--- a/src/features/navbar/NavBar.module.scss
+++ b/src/features/navbar/NavBar.module.scss
@@ -52,9 +52,6 @@
 
     &:hover {
 
-      
-      //text-shadow: 13px 13px 3px rgb(250, 250, 250), -13px -13px 3px rgb(250, 250, 250);
-      //transform: rotateX(360deg);
       transform: scaleY(150%);
       transition: all 0.5s ease 0s;
 
@@ -66,10 +63,11 @@
   }
 
   .active {
-    text-decoration: underline;
+    transform: scaleY(150%);
+    // text-decoration: underline;
 
     &:hover {
-      transform: none;
+      // transform: none;
     }
   }
 
