--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -31,7 +31,7 @@
 
 //page block template 
 
-@mixin templatePageBlock($backColor, $minHeight:100vh) {
+@mixin templatePageBlock($minHeight:100vh) {
   position: relative;
   min-height: $minHeight;
   display: flex;
@@ -52,8 +52,6 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  // border-left: 1px solid;
-  // border-right: 1px solid;
   padding-top: 50px;
   
 
