--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -5,9 +5,9 @@
 
 $textColor: #fff;
 $primaryColor: rgba(56, 56, 56, 0.667);
-
-$generalBackgroundColor: rgb(32, 32, 32);
  
+$generalBackgroundColor: rgb(32, 32, 32);
+$evenBackgroundColor: #2b2b2b;
 
 $breakpoints: (
   strech: 1020px,
