--- a/src/features/contacts/Contacts.module.scss
+++ b/src/features/contacts/Contacts.module.scss
@@ -3,59 +3,15 @@
 
 .contactsBlock {
 
-  @include templatePageBlock(rebeccapurple);
-  // height: 100vh;
-  // display: flex;
-  // align-items: center;
-  // background-color: rebeccapurple;
+  @include templatePageBlock();
+ 
   color: lavender;
 
   .contactsContainer {
 
     @include templatePageContainer();
     
-   
-    // height: 100%;
-    // width: 80%;
-    // margin: 0 auto;
-
-    // display: flex;
-    // align-items: center;
-    // flex-direction: column;
-    // justify-content: space-between;
-    // border: 1px solid;
-    // border-radius: 3px;
-
-  //   .contactsForm {
-  //     min-height: 350px;
-  //     // width: 80%;
-  //     display: flex;
-  //     flex-direction: column;
-  //     align-items: center;
-  //     justify-content: space-between;
-  //     border-radius: 3px;
-  //     background-color: indigo;
-
-  //    @include adaptabilityWidth(100%);
-  //     .input {
-  //       height: 50px;
-       
-  //       font-size: 20px;
-  //       @include adaptabilityWidth();
-  //     }
-  //     .textarea {
-  //       height: 180px;
-        
-  //       font-size: 20px;
-  //       @include adaptabilityWidth();
-  //     }
-  //   }
-  //   .contactsButton {
-  //     padding: 15px 35px;
-  //     border-radius: 3px;
-  //   }
-  // }
-}
+  }
 }
 
 
