--- a/src/features/remove-work/RemoveWork.module.scss
+++ b/src/features/remove-work/RemoveWork.module.scss
@@ -2,26 +2,12 @@
 
 .removeWorkBlock {
 
-  @include templatePageBlock(lavender, $minHeight:40vh);
-  // min-height: 40vh;
-  // display: flex;
-  // align-items: center;
-  // background-color: lavender;
-
+  @include templatePageBlock($minHeight:40vh);
+  
   .removeWorkContainer {
 
     @include templatePageContainer();
-    // height: 100%;
-    // width: 80%;
-    // margin: 0 auto;
-    // padding: 3vh 0;
-    // display: flex;
-    // align-items: center;
-    // flex-direction: column;
-    // justify-content: space-between;
-    // border: 1px solid;
-    // border-radius: 3px;
-
+   
     .title {
       text-align: center;
       font-size: 33px;
