--- a/src/features/skills/Skills.module.scss
+++ b/src/features/skills/Skills.module.scss
@@ -1,23 +1,11 @@
 @import '../../common/styles/sass/mixins.scss';
 
 .skillsBlock {
-  @include templatePageBlock(aquamarine);
-  // min-height: 100vh;
-  // background-color: aquamarine;
-  // display: flex;
-  // align-items: center;
-
+  @include templatePageBlock();
+ 
   .skillsContainer {
     @include templatePageContainer();
-    // height: 100%;
-    // width: 80%;
-    // margin: 0 auto;
-    // display: flex;
-    // align-items: center;
-    // flex-direction: column;
-    // padding-bottom: 5vh;
-    // border: 1px solid;
-
+    
     .allSkills {
      @include itemsBox();
     }
