--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,6 +4,7 @@
 .app {
   &>:nth-child(even) {
     background-color: $evenBackgroundColor;
+    color: $textColor;
   }
 }
 
@@ -17,7 +18,6 @@
   justify-content: space-around;
   background-color: rgba($color: #a9e9b9, $alpha: 0.7);
   border-radius: 3%;
-  color: aliceblue;
   z-index: 500;
 
   & button{
