--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -18,7 +18,7 @@
     .info {
       
       border-radius: 3px;
-      color: aliceblue;
+     
     
       @include max-bp('small') {
         margin-right: 10px;
@@ -33,6 +33,8 @@
       transition: width 2s;
       opacity: 0.97;
       z-index: 30;
+
+      @include shadowBox(2.5)
     }
   }
 }
