--- a/src/features/contacts/Contacts.module.scss
+++ b/src/features/contacts/Contacts.module.scss
@@ -4,9 +4,7 @@
 .contactsBlock {
 
   @include templatePageBlock();
- 
-  color: lavender;
-
+  @include text();
   .contactsContainer {
 
     @include templatePageContainer();
