--- a/src/common/component/Title/Title.module.scss
+++ b/src/common/component/Title/Title.module.scss
@@ -15,6 +15,12 @@
       transform: rotate(180deg);
     }
   };
+  @include max-bp('mini') {
+    font-size: 1.8em;
+    &.titleMain {
+      font-size: 2.2em;
+    }
+  }
 
   text-shadow: 5px 5px  5px rgb(124, 124, 124);
   &.titleMain {
