--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -1,11 +1,13 @@
 @use 'sass:map';
+@use 'sass:color';
 
+@import './function.scss';
 @import './variables';
 
-@mixin text($fontFamily, $fontSize) {
+@mixin text($fontSize: 1.2em, $fontFamily: 'Arial, sans-serif') {
   font-family: $fontFamily; //'Arial', 'sans-serif'
   font-size: $fontSize;  //16px;
-  line-height: 1.2;
+  line-height: 1.2em;
   color: setColor($generalBackgroundColor, 95%, 70);
 }
 
@@ -16,7 +18,7 @@
   }
 }
 
-// adaptability settings width
+//adaptability settings width
 
 @mixin adaptabilityWidth($miniWidth:95%) {
   width: 80%;
@@ -35,10 +37,10 @@
   position: relative;
   min-height: $minHeight;
   display: flex;
-  // align-items: center;
+  padding-bottom: 20px;
   background-color: $generalBackgroundColor;
 
-  
+  @include text();
 }
 
 // page container template
@@ -46,7 +48,6 @@
 @mixin templatePageContainer($flexDirection:column) {
   width: 80%;
   margin: 0 auto;
-  
   display: flex;
   flex-direction: $flexDirection;
   flex-wrap: wrap;
@@ -54,9 +55,12 @@
   align-items: center;
   padding-top: 50px;
   
+  
 
   @include max-bp('strech') {
     width: 90%;
+   
+    line-height: 1.2em;
   }
 
   @include max-bp('mini') {
@@ -75,21 +79,22 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding-top: 10vh;
+  
 }
 
 @mixin itemBlock($width, $minHeight: 300px) {
     min-height: $minHeight;
     width: $width;
-    margin: 2vmin ;
+    margin: 20px ;
     display: flex;
     flex-direction: column;
     align-items: center;
-    // color: $textColor;
+    
     background-color: $secondBackgroundColor;
 
     @include max-bp('mini') {
       max-width: 280px;
-      margin: 2vh 0;
+      margin: 20px 0;
   }
 }
 
@@ -108,9 +113,8 @@
   margin: 0;
   font-size: 2.5em;
   font-weight: 900;
-  line-height: 1;
-  color: #e9e9e9;
-  text-transform: uppercase;    
+  line-height: 1em;
+  text-transform: uppercase;
   writing-mode: tb-rl;
   text-align: center;
   transform: rotate(180deg);
@@ -118,15 +122,7 @@
 
 @mixin shadowBox($n: 1) {
 
-  box-shadow:0 0 13px*$n 7px*$n rgba($color: lighten($generalBackgroundColor, 99%), $alpha: 0.9);
+  box-shadow:0 0 13px*$n 7px*$n rgba($color: color.invert($generalBackgroundColor, 100%), $alpha: 0.9);
 }
 
-@function setColor($color, $number, $brightColor: 50) {
-  @if (color.lightness($color) > $brightColor) {
-    $color: darken($color, $number);
-  } @else {
-    $color: lighten($color, $number);
-  }
-  @return $color;
-}
 
