--- a/src/features/contacts/ContactsForm.module.scss
+++ b/src/features/contacts/ContactsForm.module.scss
@@ -12,25 +12,24 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 3px;
-    font-size: 1.2em;
+    // font-size: 1.2em;
     
     background-color: $secondBackgroundColor;
     @include shadowBox(2);
-    //box-shadow:0 0 18px 10px rgba($color: lighten($generalBackgroundColor, 99%), $alpha: 1.0);
-
-  & label {
-    margin-top: 20px;
-  }
-   @include adaptabilityWidth(100%);
+    
+    & label {
+      margin-top: 20px;
+    }
+    @include adaptabilityWidth(100%);
     & input {
       height: 50px;
-      font-size: 1.5em;
+      font-size: 1em;
       
       @include adaptabilityWidth();
     }
     & textarea {
       height: 150px;
-      font-size: 1.8em;
+      font-size: 1.1em;
       @include adaptabilityWidth();
     }
 
@@ -39,7 +38,7 @@
       bottom: -110px;
       padding: 15px 35px;
       border-radius: 5px;
-      font-size: 1.5em;
+      font-size: 1.1em;
       cursor: pointer;
 
       &:hover {
