--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -4,7 +4,7 @@
 .mainBlock {
   
   @include templatePageBlock();
-
+  // padding-left: 15px;
   .mainContainer {
    
     @include templatePageContainer(row);
@@ -18,7 +18,6 @@
     .info {
       
       border-radius: 3px;
-     
     
       @include max-bp('small') {
         margin-right: 10px;
